# Simple-NES

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build cdi.bat  build.bat  setup.bat
.github/workflows/: c-cpp.yml  cmake-single-platform.yml
roms/test/apu/: simple-nes.lnk
src/: emulation.c  emulation.h  ines.h  log.h  main.c  nes.c  nes.h  ppu.c  ppu.h  rp_2a03.c  rp_2a03.h  rp_2a03_apu.c  rp_2a03_apu.h  rp_2a03_cpu.c  rp_2a03_cpu.h  rp_2c02.c  rp_2c02.h
